--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,13 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+
+    sourceSets {
+        main {
+            jni.srcDirs = []
+        }
     }
 
     buildTypes {
@@ -31,4 +38,26 @@ dependencies {
     compile 'com.google.api-client:google-api-client-gson:+'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.google.code.gson:gson:2.3'
+
+    configurations.all {
+        resolutionStrategy {
+            force 'com.android.support:support-annotations:23.1.1'
+            force 'com.google.code.findbugs:jsr305:1.3.9'
+        }
+    }
+    // Android JUnit Runner
+// JUnit4 Rules
+    androidTestCompile 'com.android.support.test:rules:0.5'
+
+// Espresso core
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
+        // Necessary if your app targets Marshmallow (since Espresso
+        // hasn't moved to Marshmallow yet)
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile('com.android.support.test:runner:0.5') {
+        // Necessary if your app targets Marshmallow (since the test runner
+        // hasn't moved to Marshmallow yet)
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
 }
